test/error/syntax/err1.rzy

Err1 = Elementary
  out : signal();
  
  inp : slot()
    out.foo();      // .foo does not exist
  end
  
end

